update env vars

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=nairaland-2.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=532980349495
 NEXT_PUBLIC_FIREBASE_APP_ID=1:532980349495:web:da297c44b0552b59b2ddb2
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-EJFGTFXJ90
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=532980349495-p7ktubtisv8h8tjjaq1a468de3pm3b1f.apps.googleusercontent.com
