--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@types/google-one-tap": "^1.2.2",
     "firebase": "^9.16.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
     "framer-motion": "^8.5.2",
     "moment": "^2.29.4",
     "next": "13.1.5",
+    "next-auth": "^4.22.3",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
