--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
+    "@choc-ui/chakra-autocomplete": "^5.1.9",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@types/google-one-tap": "^1.2.2",
